--- a/styles/services.css
+++ b/styles/services.css
@@ -1,103 +1,161 @@
-.expanded-services {
 
-	/* background-color: var(--quat); */
-	/* outline: var(--section); */
-}
 
-.service-article {
-	margin: var(--r1) var(--r2);
-	padding: 0;
-	background-color: var(--prim);
-	/* outline: var(--component); */
-}
-
-.service-article h2 {
-	margin-bottom: var(--r3);
-}
-
-.service-article p {
-
-}
-
-.service-article {
-  position: relative;
-	margin: var(--r1) var(--r2);
-	margin-bottom: 3rem;
-	padding: 0;
+.service-container {
+  /*   overflow: hidden; */
+  /*   overflow-x: visible; */
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    margin: var(--r5) 0;
+    margin-bottom: 3rem;
+    width: 80vw;
+  }
   
-  width: 80vw;
-  color: var(--prim);
+  .service-article {
+    position: relative;
+    padding: 0;
+    
+    color: var(--prim);
+    background-color: var(--quat);
+    
+    transition: all 300ms ease;
+  }
   
-	background-color: var(--quat);
-}
-
-.service-article h2 {
-  display: inline-block;
-  margin: 0;
-  padding: var(--r2) var(--r4);
-	background-color: var(--tert);
-  color: var(--prim);
-}
-
-.service-article p {
-	padding: var(--r6);
-}
-
-.service-expand {
-  overflow: hidden;
-  position: absolute;
+  .service-container > .service-article:first-child {
+    box-shadow: 0px 4px 6px -3px var(--detail);
+    z-index: 1;
+  }
   
-  right: 0;
-  bottom: 0;
-  transform: translate(50%, 50%);
-  width: 5rem;
-  height: 5rem;
+  .service-article h2 {
+    display: inline-block;
+    margin: 0;
+    padding: var(--r2) var(--r4);
+    background-color: var(--tert);
+    color: var(--prim);
+  }
   
-  background-color: var(--tert);
-  border: var(--r2) solid var(--prim);
-  border-radius: 50%;
+  .service-article p {
+    padding: var(--r6);
+  }
   
-  cursor: pointer;
-}
-
-.service-expand::before {
-  content: "";
-  position: absolute;
+  .service-expand {
+    overflow: hidden;
+    position: absolute;
+    
+    right: 0;
+    bottom: 0;
+    transform: translate(50%, 50%);
+    width: 5rem;
+    height: 5rem;
+    
+    background-color: var(--tert);
+    border: var(--r2) solid var(--prim);
+    border-radius: 50%;
+    
+    transform-origin: center center;
+    cursor: pointer;
+    z-index: 1;
+  }
   
-  bottom: 30%;
-  left: 25%;
-  width: 50%;
-  height: 50%;
+  .service-expand::before {
+    content: "";
+    position: absolute;
+    
+    bottom: 30%;
+    left: 25%;
+    width: 50%;
+    height: 50%;
+    
+    transform: rotate(45deg);
+    
+  /*   background-color: var(--detail); */
+    border-right: 1rem solid var(--detail);
+    border-bottom: 1rem solid var(--detail);
+  /*   outline: .5rem solid var(--sec) .5rem solid var(--sec) .5rem solid var(--sec) .5rem solid var(--sec); */
+  }
   
-  transform: rotate(45deg);
-  background-color: var(--detail);
-  /* outline: .5rem solid var(--sec) .5rem solid var(--sec) .5rem solid var(--sec) .5rem solid var(--sec); */
-}
-
-.service-expand::after {
-  content: "";
-  position: absolute;
+  .service-expand::after {
+    display: none;
+    content: "";
+    position: absolute;
+    
+    bottom: 55%;
+    left: 25%;
+    width: 50%;
+    height: 50%;
+    
+    transform: rotate(45deg);
+    background-color: var(--tert);
+    background-color: var(--quat);
+  }
   
-  bottom: 55%;
-  left: 25%;
-  width: 50%;
-  height: 50%;
+  .service-expand.pull-open {
+    transform: translate(50%, 50%) rotate(180deg);
+    transform-origin: center center;
+  }
   
-  transform: rotate(45deg);
-  background-color: var(--tert);
-}
-
-.service-expand,
-.service-expand * {
-  transition: all 200ms linear;
-}
-
-.service-expand:hover,
-.service-expand:hover::after {
-  background-color: var(--sec);
-}
-
-.service-expand:hover::before,
-.service-expand:hover::after {
-	transform: scale(1.1) rotate(45deg);
-}
+  .service-expand,
+  .service-expand::before,
+  .service-expand::after {
+    transition: all 200ms ease;
+  }
+  
+  .service-expand:hover,
+  .service-expand:hover::after,
+  .service-expand:focus,
+  .service-expand:focus::after{
+    background-color: var(--sec);
+    outline: 0;
+  }
+  
+  .service-expand:hover::before,
+  .service-expand:focus::before{
+    transform: scale(1.1) rotate(45deg);
+  }
+  
+  .pulldown {
+    overflow: hidden;
+    position: relative;
+    width: calc(100% - .2rem);
+    margin-left: auto;
+    /* height: 0; */
+  /*   transform: translateY(-100%); */
+    max-height: 0;
+    transition: all 150ms ease;
+  }
+  
+  .pulldown.pull-open {
+  /*  Not going to worry about the max-height for now, as this will be a static site, I can probably get away with explicitly coding it and move on to the next piece. Since I can't animate max-height with very implicit units *SIGH* */
+    max-height: 100vh;
+  }
+  
+  /* .pulldown *, */
+  .pulldown .p,
+  .pulldown .ul {
+  /*   position: absolute; */
+    transform: translateY(-300%);
+    transition: all 150ms ease;
+  }
+  
+  /* .pulldown *.pull-open, */
+  .pulldown .p.pull-open,
+  .pulldown .ul.pull-open {
+  /*   position: relative; */
+    transform: translateY(0%);
+    
+  }
+  
+  .pulldown ul {
+    padding-bottom: var(--r6);
+    padding-left: 3.5rem;
+    padding-right: var(--r6);
+    list-style-type: circle;
+  }
+  
+  .pulldown li {
+    padding-bottom: var(--r3);
+  }
+  
+  .pulldown li::marker {
+    color: var(--detail);
+  }
